# rust_excecise-master

rust_excecise-master/: Cargo.toml  error.txt
rust_excecise-master/src/: main.rs
rust_excecise-master/src/error_handling/: handler_test_01.rs  mod.rs
rust_excecise-master/src/master/: async_future.rs  basics.rs  bubble_sort.rs  closures.rs  compound_types.rs  concurrency.rs  data_selection.rs  data_test.rs  debug_print.rs  errors_handle.rs  generics.rs  iterators_lifetimes.rs  lifetime.rs  linklist.rs  macros.rs  mod.rs  pointers.rs  principles.rs  reallife.rs  recursion.rs  stacks.rs  string_literals.rs  structs.rs  threads.rs  traits.rs  traits_02.rs  vectors.rs
rust_excecise-master/src/services/: array_service.rs  collection.rs  enumeration_service.rs  hash_map.rs  higher_order.rs  lifetime_memory.rs  main2.rs  match_statement.rs  mod.rs  mutext_arc.rs  reference_counter.rs  stack_heap.rs  string_format.rs  struct_service.rs  traits.rs
